# quaterion

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  QUICK_START.md  README.md  netlify.toml  pyproject.toml  split_cache.pkl
.github/workflows/: autoblack.yml  build-docs.yml  python-publish.yml  test.yml
docs/: .gitignore  generate_docs.sh  generate_docs_netlify.sh
docs/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  quaterion.dataset.html  quaterion.dataset.indexing_dataset.html  quaterion.dataset.similarity_data_loader.html  quaterion.dataset.similarity_dataset.html  quaterion.dataset.similarity_samples.html  quaterion.dataset.train_collater.html  quaterion.distances.base_distance.html  quaterion.distances.cosine.html  quaterion.distances.dot_product.html  quaterion.distances.euclidean.html  quaterion.distances.html  quaterion.distances.manhattan.html  quaterion.eval.base_metric.html  quaterion.eval.group.group_metric.html  quaterion.eval.group.html  quaterion.eval.group.retrieval_r_precision.html  quaterion.eval.html  quaterion.eval.pair.html  quaterion.eval.pair.pair_metric.html  quaterion.eval.pair.retrieval_precision.html  quaterion.eval.pair.retrieval_reciprocal_rank.html  quaterion.html  quaterion.loss.arcface_loss.html  quaterion.loss.contrastive_loss.html  quaterion.loss.extras.html  quaterion.loss.extras.pytorch_metric_learning_wrapper.html  quaterion.loss.group_loss.html  quaterion.loss.html  quaterion.loss.metrics.html  quaterion.loss.multiple_negatives_ranking_loss.html  quaterion.loss.online_contrastive_loss.html  quaterion.loss.pairwise_loss.html  quaterion.loss.similarity_loss.html  quaterion.loss.softmax_loss.html  (+18 more)
docs/quaterion/: index.html  main.html
docs/source/: conf.py  index.rst  quaterion.dataset.indexing_dataset.rst  quaterion.dataset.label_cache_dataset.rst  quaterion.dataset.rst  quaterion.dataset.similarity_data_loader.rst  quaterion.dataset.similarity_samples.rst  quaterion.dataset.train_collater.rst  quaterion.dataset.train_collator.rst  quaterion.distances.cosine.rst  quaterion.distances.euclidean.rst  quaterion.distances.manhattan.rst  quaterion.distances.rst  quaterion.eval.accumulators.accumulator.rst  quaterion.eval.accumulators.group_accumulator.rst  quaterion.eval.accumulators.pair_accumulator.rst  quaterion.eval.accumulators.rst  quaterion.eval.attached_metric.rst  quaterion.eval.base_metric.rst  quaterion.eval.evaluator.rst  quaterion.eval.pair.pair_metric.rst  quaterion.eval.rst  (+40 more)
examples/: .gitignore  train_cifar100.py  train_cifar100_with_pytorch_metric_learning.py  train_cifar100_with_xbm.py  train_startup_finder.py  train_startup_search.py
quaterion/: __init__.py  main.py
tests/: model_fixtures.py  test_contrastive_loss.py  test_distance_metric.py  test_distances.py  test_eval_metrics.py  test_evaluator.py  test_import.py  test_multiple_negatives_ranking_loss.py  test_online_contrastive_loss.py  test_switch_encoder.py  test_triplet_loss.py
(+262 files in other folders)
