[tool.poetry]
name = "quaterion"
version = "0.1.22"
description = "Metric Learning fine-tuning framework"
authors = ["generall <andrey@vasnetsov.com>"]
packages = [
    {include = "quaterion"},
]
readme = "README.md"
homepage = "https://github.com/qdrant/quaterion"
repository = "https://github.com/qdrant/quaterion"
keywords = ["framework", "metric-learning", "similarity", "deep-learning", "pytorch"]


[tool.poetry.dependencies]
python = ">=3.7,<3.10"
torch = ">=1.8.2"
pytorch-lightning = "^1.5.8"
quaterion-models = ">=0.1.9"
loguru = "^0.5.3"
mmh3 = "^3.0.0"
pytorch-metric-learning = {version = "^1.3.0", optional = true}
protobuf = ">= 3.9.2, <3.20"  # until https://github.com/PyTorchLightning/pytorch-lightning/issues/13159 is fixed
rich = "^12.4.4"
torchmetrics = "<=0.8.2" # Intil warning with `full_state_update` is fixed


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
ipdb = "^0.13.9"
sphinx = ">=5.0.1"
qdrant-sphinx-theme = { git = "https://github.com/qdrant/qdrant_sphinx_theme.git", branch = "master" }
black = "^22.3.0"
torchvision = "^0.12.0"


[tool.poetry.extras]
pytorch-metric-learning = ["pytorch-metric-learning"]
full = ["pytorch-metric-learning"]


[build-system]
requires = ["poetry-core>=1.0.0", "setuptools==59.5.0"] # temporary fix for https://github.com/pytorch/pytorch/pull/69904
build-backend = "poetry.core.masonry.api"
